--- a/src/docs/folder1/test.mdx
+++ b/src/docs/folder1/test.mdx
@@ -11,6 +11,10 @@ metas:
 
 # {title}
 
+This page is here so you can see how it works.
+
+## Sort Order (menu.order):
+
 The reason this group is at the bottom of the list is because the 
 `index.mdx` in this folder, `folder1/`, has an `order` value of 
 15. That orders this folder low in the main nav. Here's the contents
@@ -25,8 +29,12 @@ menu:
 ---
 ```
 
-The name of the index is the name of the category. Now, the `order` setting on 
-the individual files within this folder control the order in which they appear
-in the group. Or, leave them all set at 0 for auto sort.
+## Group / Category Naming:
+
+The name of the index in any directory is the name of the category. Now, the 
+`order` setting on the individual files within this folder control the order 
+in which they appear in the group. Or, leave them all set at 0 for auto sort.
 
 Folders work one-level deep, which is pretty good for a template hack!
+
+**See also: [How the docs system works](/docs/docs-system/).**
