--- a/src/docs/folder1/test.mdx
+++ b/src/docs/folder1/test.mdx
@@ -2,7 +2,7 @@
 title: Example Page From folder1/
 menu:
   visible: true
-  order: 0
+  order: 16
 seo:
   ignore: true
 metas:
@@ -33,7 +33,8 @@ menu:
 
 The name of the index in any directory is the name of the category. Now, the 
 `order` setting on the individual files within this folder control the order 
-in which they appear in the group. Or, leave them all set at 0 for auto sort.
+in which they appear in the group. The orders should be the same or _greater_
+than the order assigned to the index.
 
 Folders work one-level deep, which is pretty good for a template hack!
 
