--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -15,23 +15,21 @@ metas:
 
 # Getting Started:
 
-The theme isn't officially released until a short time after Lume 3 releases, 
+The theme won't officially released until a short time after Lume 3 releases, 
 which will likely be mid-May 2025. I'll list the theme in the Lume Theme Gallery
 after the launch of v3 settles. There are still daily updates to contend with 
 to stay mostly lock-step with `lume-dev`.
 
 However, You can head over to the [theme repo](https://github.com/timthepost/cushytext-theme) 
 now if you want, and use the theme via Git. You're also welcome to use the SEO 
-plugin.
-
-The `0.0.1` release is still _technically_ pre-release. I'll be converting the 
-template repo over to an actual template repo once it gets listed in the theme
-registry.
+plugin. Just understand there are still a constant stream of tweaks coming in 
+and probably will be until release day. See the docs in the README there, or 
+[the plugin docs and examples here](/docs/theme-plugins/#simple-seo).
 
 <h2 id="roadmap">Near-Term Roadmap: (`0.0.2 - 0.0.3`)</h2>
- - Docs has smart nav, but could be smarter about the styles and auto closers 
-   for categories. 
  - More robust archetype scripts and CMS integration.
+ - Docs supports sub-folders, but only one level deep. Needs a sidebar format so 
+   larger installs can bypass auto-nav and hand it an object instead.
  - Blogs should be able to have per-instance archive and tag pages, with control
    over layouts used for each one.
  - Have a default localization plugin / setup.
