chore: fix typo

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -15,7 +15,7 @@ metas:
 
 # Getting Started:
 
-The theme won't officially released until a short time after Lume 3 releases, 
+The theme won't officially release until a short time after Lume 3 releases, 
 which will likely be mid-May 2025. I'll list the theme in the Lume Theme Gallery
 after the launch of v3 settles. There are still daily updates to contend with 
 to stay mostly lock-step with `lume-dev`.
