stupid code editor

--- a/src/blog/remember-the-human-reader.mdx
+++ b/src/blog/remember-the-human-reader.mdx
@@ -113,7 +113,7 @@ You still need someone who can own that consistency, that voice, that sense of r
 that drives trust -- these aren't things machines can foster. Not yet, and, probably, not 
 for quite some time.
 
-## It's Not A Binary choices
+## It's Not A Binary Choice
 
 I get visibly depressed when someone asks me "_Which is better .._" when it comes to almost 
 _anything_. The answer is always obvious unless it depends on the circumstances, whatever
@@ -129,7 +129,7 @@ will all still be happy if we work together and use them as a tool instead of lo
 at everything with eyes for cost elimination. It's not always possible, but please be
 conscious of the trade-off. 
 
-## Remembering The human
+## Remembering The Human
 
 We remember the human all the time, from working extra hard to implement great UX in hard
 places, to auto-saving drafts, to everything else we do as we build things for each other
