Add <more> anchor to post

--- a/src/blog/remember-the-human-reader.mdx
+++ b/src/blog/remember-the-human-reader.mdx
@@ -57,6 +57,7 @@ video presentations, you're costing yourself conversions, I don't care what your
 designer says.
 
 {/* more */} 
+<div id="more"></div>
   
 Well, I do care what they say, and you should too, but this can be a touchy topic and kick off
 a passionate discussion.
