content: Final edit pass for docs titles

--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -1,5 +1,5 @@
 ---
-title: Infima And Lume 3 Components
+title: Infima &amp; Lume Components
 description: How Infima components naturally marry to the components in Lume 3.
 metas:
   image: /docs/components/index.png
