--- a/src/docs/docs-system.mdx
+++ b/src/docs/docs-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: How The Documentation System Works
+title: Mini-Documentation System
 date: '2025-03-30'
 author: Tim Post
 draft: false
