--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -1,5 +1,5 @@
 ---
-title: How Do Tag Wikis And Tag Feeds Work?
+title: Tag Wikis &amp; Tag RSS Feeds
 description: How to use the built-in tag wiki and tag feed features.
 metas:
   description: Tag wikis are a feature built into Cushy Text to help bolster collaboration, provide convenience and even bolster SEO.
