--- a/src/docs/theme-switchers.mdx
+++ b/src/docs/theme-switchers.mdx
@@ -1,5 +1,5 @@
 ---
-title: How Do The Theme Switchers Work?
+title: Theme &amp; Font Switchers
 description: How the built-in theme and font switchers work.
 metas:
   description: The theme and font switchers included with Cushy Text offer convenience, comfort and additional content accessibility. 
