--- a/src/docs/middleware.mdx
+++ b/src/docs/middleware.mdx
@@ -1,5 +1,5 @@
 ---
-title: Working With Lume 3 Router Middleware
+title: Router Middleware
 description: Building Interactive Features With Lume 3 Middleware
 metas:
   description: How Cushy Text takes advantage of the Router middleware in Lume 3 to handle form submissions and API requests.
