--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tweaking The SEO And TOC Plugins
+title: TOC &amp; SEO Plugins
 description: Documentation on the Table Of Contents And SEO Plugins
 metas:
   description: Documentation on the SEO and TOC plugins that come with Cushy Text, An Interactive Theme For Lume 3
