content: fix typo

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -47,8 +47,8 @@ So, I created one! And, I named it Cushy Text!
 ## Multi-Instance / Multi-Archetype With Central Search
 
 The goal is allowing multiple instances of blogs, docs and collections of pages on the same
-site, under the same design, in a seamless experience for both creating and consuming. things
-are separated by folder, and can even functionally have separate tags if you want. 
+site, under the same design, in a seamless experience for both creating and consuming. Things
+are separated by folders, and can even functionally have separate tags if you want. 
 
 While posts and pages and docs are grouped together by _type_, they also each have a unique
 identifier that I call a waypoint, which allows pulling content from one or several sources
