--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -39,11 +39,11 @@ The [content rating plugin])(/docs/content-rating/) (aka anonymous feedback) is 
 The blog configuration brings a lot of robust features such as:
 
  - Tagging & Community Tag Wiki System
- - RSS/JSON Feeds for all posts, as well as individual, ***per-tag*** feeds.
- - Archive Pages For Posts, Authors & Tags  
- - Blog Homepage, which can become the site homepage if you want.
  - Automatic OG Image Generation. Built for writing tutorial-style content as well
-   as essays. 
+   as essays or even galleries. 
+ - RSS/JSON Feeds for all posts, as well as individual, ***per-tag*** feeds.
+ - Archive Pages For Posts, Authors & Tags
+ - Blog Homepage, which can become the site homepage if you want.
  - Code Syntax Highlighting with MDX lets you use a wide variety of components.
  - Auto Image Resizing: Upload blog images to `uploads` and _fahhhhhhh-get about it._
  - Interactive Content Rating System Powered by DenoKV, Discord, GH Issues or whatever
