Add lume-mermaid to plugin roster

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -222,4 +222,6 @@ optimization. Have a look at what's under the hood:
 | brotli | Compression | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | Yes |
 | source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
+| lume-mermaid | Mermaid Diagrams | devEx | Nap Calub  (We Will Craft) | Yes | Yes |
+
 
