plugins: re-insert  minifyHTML

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -219,6 +219,7 @@ optimization. Have a look at what's under the hood:
 | readinginfo | Display Reading Time  | user | Lume Official | Yes | No |
 | prism | Fancy Code Highlighting | user | Lume Official | Yes | Yes |
 | terser | JavaScript Minifier | perf | Lume Official | Yes | Yes |
+| minifyHTML | HTML Minifier | perf | Lume Official | Yes | Yes |
 | brotli | Compression | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | Yes |
 | source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
