chore: update plugin table

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -223,6 +223,10 @@ optimization. Have a look at what's under the hood:
 | brotli | Compression | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | Yes |
 | source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
-| lume-mermaid | Mermaid Diagrams | devEx | Nap Calub  (We Will Craft) | Yes | Yes |
+| lume-mermaid | Mermaid Diagrams | devEx | Nap Calub  (<a href="https://willcraft.software/">Will Craft Software</a>) | Yes | Yes |
+
+If a plugin has "No" in the "Installed" column, it means that the plan is 
+to include it, but some work might be needed, or waiting for a version update
+to come out before inclusion in the theme.
 
 
