css: add wrapper class for mermaid diagrams

--- a/src/docs/folder1/test.mdx
+++ b/src/docs/folder1/test.mdx
@@ -17,7 +17,7 @@ This page is here so you can see how sub-folders and Mermaid diagrams work.
 
 Here's a simple Mermaid diagram:
 
-<div style="background: #222; border-radius: 1em;" class="margin-vert--md padding--lg">
+<div class="mermaid_wrapper">
 ```mermaid
 graph TD;
   A-->B;
