docs: fix redundant text

--- a/src/docs/folder1/test.mdx
+++ b/src/docs/folder1/test.mdx
@@ -42,9 +42,10 @@ graph TD;
 
 Much more complex arrangements are possible, as well as customizations.
 
-## See Also
+## See Also:
 
-**See also:**
+Additional resources for the plugin:
 
  - [How the docs system works](/docs/docs-system/)
  - [Mermaid Plugin Documentation](https://lume-mermaid.willcraft.software/)
+ 
