--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: More Features Than You'd Expect From A Theme!
+title: Cushy Text Brings More Than The Usual Theme To The Table
 layout: layouts/page.vto
 description: Features Of Cushy Text - An Infima-Powered, Interactive, Responsive & Accessible Theme For Lume 3+
 menu:
@@ -10,6 +10,9 @@ metas:
   image: /features/index.png
 ---
 # {title}
+
+We're trying to bring a better writer experience by making better user experiences
+easier to craft.
 
 The developer of this theme worked in the technology industry, in a position
 known as Developer Relations. In early-stage startup companies, the "DevRel" 
@@ -25,14 +28,16 @@ places.
 
 <h2 id="interactive">Static Doesn't Have To Mean Stagnate! Interactive Stuff Is Included!</h2>
 
-The first two features to offer interactive engagement experiences will be a content rating
-system that's currently visible on every page [in our docs site])(/docs/), with an accompanying 
-admin plugin to view and delete feedback.
+The first interactive component was the anonymous feedback and rating system that's currently 
+visible on every page [in our docs site](/docs/), with an [accompanying admin plugin](/dev/) to 
+view and delete feedback.
 
 Things are working fine with DenoKV; we're also looking to implement a way to use Github Issues
 as well as Discord to receive submissions.  
 
-The [content rating plugin])(/docs/content-rating/) (aka anonymous feedback) is live right now. 
+See the [content rating plugin docs](/docs/content-rating/) for more information. To view the 
+mini-API implemented using Lume3's new [Router Middleware](https://lume.land/plugins/router/) 
+to manage it and a few other things, see the `src/_server_routes.ts` module in the theme.
 
 <h2 id="blog">A Fully-Featured, Interactive & SEO Optimized Blog</h2>
 
