--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -252,10 +252,6 @@ to builds, so I'd like to minimize that.
 Plus, this thing already has ***twenty-one frigging options*** 😱 so why not make it
 fifty? 😂
 
-
-<comp.alert type="warning" 
-  message="***Unreleased Code Warning: This list isn't fully-settled yet.***<br />I don't foresee any breaking changes, but still settling on everything and testing defaults." />
-
 <h2 id="simple-seo-plugin-options" class="margin-top--md">All Simple SEO Plugin Options & Code Defaults:</h2>
 
 | Option                             | Description                                                                                                   | Default Value          |
@@ -288,3 +284,56 @@ fifty? 😂
 | `commonWordPercentageCallback`     | A custom callback function to calculate the common word percentage.                                            | `null`                 |
 | `ignoreAllButLocale`               | Ignore any post not in this locale (useful for daisy chaining)                                                 | `null`                 |
 | `logOperations`                    | If activity (blow by blow decision making) should be logged while running. Has nothing to do with the report.  | `false` |
+
+<h2 id="warning-glossary" class="margin-top--md">Warning Glossary</h2>
+
+The meaning of, and rationale behind the various checks are listed below. The 
+plugin will link to these sections where appropriate in the Lume debug bar
+report.
+
+<h3 id="length-warning" class="margin-top--md">Length Warnings</h3>
+
+These are issued when the length of something is longer or shorter than expected
+for optimal SEO impact. Numbers come from standard recommendations from Google,
+Bing, Yandex and others.
+
+Too short, and something might not count toward you getting indexed. Too long, 
+and it might get truncated, or possibly get you flagged if egregiously trying
+to keyword-stuff or similar behavior.
+
+<h3 id="common-word-warning" class="margin-top--md">Common Word Warnings</h3>
+
+Languages have words that are more frequently used than others, some are _way_ 
+more frequently used than others. These words are there for sentence structure
+and support, and generally don't help _drive_ the main idea of an element. 
+
+Titles and descriptions are stronger with higher ratios of uncommon words. There
+is no exact science to what the ideal percentage is, it depends on your topic
+space, keyword goals and writing style. Don't aim for perfection, but try to 
+keep it below 50%, ideally lower, when possible.
+
+<h3 id="image-alt-warning" class="margin-top--md">Image Alt Attribute Warnings</h3>
+
+Images need alt-text for SEO and accessibility. 
+
+<h3 id="image-title-warning" class="margin-top--md">Image Title Attribute Warnings</h3>
+
+Consider using image titles strategically, either for image search optimization or even
+witty humor. 
+
+<h3 id="structure-warning" class="margin-top--md">Structure Warnings</h3>
+
+Headings `<h1>`, `<h2>`, etc need to be in order. If you use a `<h3>` tag, it should
+be only after a `<h2>` tag was used, for instance. The plugin makes sure this is
+the case. Sometimes components and templates use headings, and this check catches
+those instances where it happens out of document order.
+
+Other structure warnings might be a missing `<h1>` tag.
+
+<h3 id="missing-error" class="margin-top--md">Missing Errors</h3>
+
+Missing errors are errors that aren't structural (like tags out of order), but the 
+document is missing something, like an important meta tag or title. 
+
+The document doesn't need _fixing_, it's just _incomplete_. This is reported as an
+error because it should not happen if using archetypes properly.
