--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -333,7 +333,6 @@ Other structure warnings might be a missing `<h1>` tag.
 <h3 id="missing-error" class="margin-top--md">Missing Errors</h3>
 
 Missing errors are errors that aren't structural (like tags out of order), but the 
-document is missing something, like an important meta tag or title. 
-
-The document doesn't need _fixing_, it's just _incomplete_. This is reported as an
-error because it should not happen if using archetypes properly.
+document is missing something, like an important meta tag or title. The document doesn't 
+need _fixing_, it's just _incomplete_. This is reported as an error because it should not 
+happen if using archetypes properly.
