site: fix meta tags

--- a/src/blog/0-0-1-component-strategy-update.mdx
+++ b/src/blog/0-0-1-component-strategy-update.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: An update on how components will be structured and expected in the theme, most notably relaxing the requirement of backfilling all of the Infima components with Lume 3 wrappers.
-  tags:
+  keywords:
     - Lume Themes
     - Infima CSS
     - Loadable Javascript Components
