--- a/src/blog/0-0-1-pre-release.mdx
+++ b/src/blog/0-0-1-pre-release.mdx
@@ -14,7 +14,7 @@ tags:
 metas:
   lang: en
   description: An announcement of the availability of Cushy Text 0.0.1 in pre-release from Github.
-  tags:
+  keywords:
     - static site generators
     - self-publishing
     - lume theme
