--- a/src/blog/0-0-1-release-update.mdx
+++ b/src/blog/0-0-1-release-update.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: Unplanned Additions, Last-minute Ditches, And A List Of What Remains To Be Finished In Cushy Text For Lume 3
-  tags:
+  keywords:
     - Static Site Generators
     - Development updates
     - Themes For Lume 3
