--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: An announcement of Cushy Text - A Lume theme designed specifically to suit the needs of content-rich websites.
-  tags:
+  keywords:
     - Static Site Generators
     - Lume Themes
     - Infima Theme For Lume
