--- a/src/blog/index.mdx
+++ b/src/blog/index.mdx
@@ -5,6 +5,11 @@ layout: layouts/post-index.vto
 metas:
   image: /blog/index.png
   description: The Cushy Text Blog
+  keywords:
+    - Tech Blog
+    - Lume 3 Tutorials
+    - Lume Projects Blog
+    - Technical Writing And Self-Publishing
 menu:
   order: 0
   visible: false
