--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -14,7 +14,7 @@ tags:
 metas:
   lang: en
   description: Ideas for interactive features that could ship with the first beta version of Cushy Text.
-  tags:
+  keywords:
     - Static Site Generators
     - Lume Themes
     - Infima Theme For Lume
