--- a/src/blog/post-hog-static-sites.mdx
+++ b/src/blog/post-hog-static-sites.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: A review of PostHog after a month and starting from scratch on a static site. Uncompensated. 
-  tags:
+  keywords:
     - Analytics
     - Cookie Banners
     - Google Analytics Alternatives
