--- a/src/blog/quick-accessibility-update-0.0.1.mdx
+++ b/src/blog/quick-accessibility-update-0.0.1.mdx
@@ -14,7 +14,7 @@ tags:
 metas:
   lang: en
   description: "A Good Rundown On Where Cushy Text Stands As Far As Accessibility Goes Without Getting Too Technical About CSS."
-  tags:
+  keywords:
     - Self Publishing
     - Web Accessibility
     - Static Site Generators
