--- a/src/blog/remember-the-human-reader.mdx
+++ b/src/blog/remember-the-human-reader.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: An essay on building human connections by how we illustrate technical concepts, and why humans should be in-charge of it.
-  tags:
+  keywords:
     - Software Documentation
     - Technical Writing
     - Technical Documentation Writing
