--- a/src/blog/seo-plugin-roadmap.mdx
+++ b/src/blog/seo-plugin-roadmap.mdx
@@ -13,7 +13,7 @@ tags:
 metas:
   lang: en
   description: A rundown of major changes planned for 0.1.0 in the SimpleSEO Static Analysis Plugin That Comes With CushyText.
-  tags:
+  keywords:
     - Search Engine Optimization
     - SEO Plugin For Lume
     - Static Analysis SEO
