--- a/src/blog/static-site-enthusiast.mdx
+++ b/src/blog/static-site-enthusiast.mdx
@@ -15,7 +15,7 @@ tags:
 metas:
   lang: en
   description: A journey to evangelizing static generated sites that began in WordPress hosting almost two decades ago.
-  tags:
+  keywords:
     - WordPress Hosting
     - Static Sites
     - Self Publishing
