--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -15,7 +15,7 @@ tags:
 metas:
   lang: en
   description: An essay on why indecision and lack of vision in the WordPress world will lead to a growth in static site adoption.
-  tags:
+  keywords:
     - WordPress
     - Static Site Generator
     - Self Publishing
