--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -4,7 +4,7 @@ description: Things to understand about Cushy Text _data files, and how they aff
 metas:
   image: /docs/archetypes/index.png
   description: Understanding how Cushy Text for Lume 3 uses the data layer to control page generation.
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 
