--- a/src/docs/blog-system.mdx
+++ b/src/docs/blog-system.mdx
@@ -9,7 +9,7 @@ menu:
 metas:
   lang: en
   description: Overview of How Cushy Text takes advantage of Lume 3 features to create a full-featured, SEO-minded, multi-tenant blog system.
-  tags:
+  keywords:
     - Self Publishing
     - Static Site Blog
     - Lume Blog Template
