--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -4,7 +4,7 @@ description: How Infima components naturally marry to the components in Lume 3.
 metas:
   image: /docs/components/index.png
   description: A guide to how the Lume 3 component structure is used in Cushy Text, and when the Lume 2 style should still be used.
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 
