--- a/src/docs/content-rating.mdx
+++ b/src/docs/content-rating.mdx
@@ -4,7 +4,7 @@ description: Which components are interactive, and how do they work?
 metas:
   image: /docs/archetypes/index.png
   description: A guide to the interactive content rating and associated admin plugin included with Cushy Text.
-  tags:
+  keywords:
     - Content Rating System
     - Self Publishing
     - Lume Theme
