--- a/src/docs/docs-system.mdx
+++ b/src/docs/docs-system.mdx
@@ -9,7 +9,7 @@ menu:
 metas:
   lang: en
   description: How the Cushy Text documentation system works, where it's headed as a theme feature, and interesting anecdotes about it.
-  tags:
+  keywords:
     - Self Publishing
     - Static Site Blog
     - Lume Blog Template
