--- a/src/docs/middleware.mdx
+++ b/src/docs/middleware.mdx
@@ -3,7 +3,7 @@ title: Router Middleware
 description: Building Interactive Features With Lume 3 Middleware
 metas:
   description: How Cushy Text takes advantage of the Router middleware in Lume 3 to handle form submissions and API requests.
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 Middleware
