--- a/src/docs/navigation-generation.mdx
+++ b/src/docs/navigation-generation.mdx
@@ -9,7 +9,7 @@ menu:
 metas:
   lang: en
   description: How the Cushy Text navigation is generated, and where it's headed in development.
-  tags:
+  keywords:
     - Self Publishing
     - Static Site Blog
     - Lume Blog Template
