--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -3,7 +3,7 @@ title: Tag Wikis &amp; Tag RSS Feeds
 description: How to use the built-in tag wiki and tag feed features.
 metas:
   description: Tag wikis are a feature built into Cushy Text to help bolster collaboration, provide convenience and even bolster SEO.
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 
