--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -3,7 +3,7 @@ title: TOC & SEO Plugins
 description: Documentation on the Table Of Contents And SEO Plugins
 metas:
   description: Documentation on the SEO and TOC plugins that come with Cushy Text, An Interactive Theme For Lume 3
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 
