--- a/src/docs/theme-switchers.mdx
+++ b/src/docs/theme-switchers.mdx
@@ -3,7 +3,7 @@ title: Theme &amp; Font Switchers
 description: How the built-in theme and font switchers work.
 metas:
   description: The theme and font switchers included with Cushy Text offer convenience, comfort and additional content accessibility. 
-  tags:
+  keywords:
     - Self Publishing
     - Lume Theme
     - Lume 3 
